Add edge label to path
