# chronoweb/src/main/java/org/dfpl/chronograph/chronoweb/router/SubscriptionRouter.java
@@ -67,7 +67,7 @@ public class SubscriptionRouter extends BaseRouter {
 
 	public void registerSubscribeVertexEventRouter(Router router, EventBus eventBus) {
 
-		router.put("/chronoweb/graph/:time/:kairosProgram/:vertexID/:edgeLabel").handler(routingContext -> {
+		router.put("/chronoweb/graph/:time/:kairosProgram/:edgeLabel/:vertexID").handler(routingContext -> {
 			long time;
 			try {
 				time = Long.parseLong(routingContext.pathParam("time"));
@@ -89,9 +89,7 @@ public class SubscriptionRouter extends BaseRouter {
 			}
 
 			String edgeLabel = routingContext.pathParam("edgeLabel");
-			try {
-				edgeLabel = routingContext.pathParam("edgeLabel");
-			} catch (Exception e) {
+			if (edgeLabel == null){
 				sendResult(routingContext, "application/json", MessageBuilder.getMissingRequiredURLParameterException("edgeLabel"), 400);
 				return;
 			}
@@ -104,12 +102,12 @@ public class SubscriptionRouter extends BaseRouter {
 			}
 
 			try {
-				if (kairos.getProgram(time, kairosProgram).getGammaTable().getSources().contains(vertexID)) {
+				if (kairos.getProgram(time, kairosProgram, edgeLabel).getGammaTable().getSources().contains(vertexID)) {
 					sendResult(routingContext, "application/json", MessageBuilder.sourceAlreadySubscribedException,
 							409);
 					return;
 				}
-			} catch (Exception e) {
+			} catch (Exception ignored) {
 
 			}
 
@@ -120,7 +118,7 @@ public class SubscriptionRouter extends BaseRouter {
 				ve = new PChronoVertexEvent(graph, vertexID, time, ((PChronoGraph) graph).getVertexEventCollection());
 			}
 
-			AbstractKairosProgram<?> existing = kairos.getProgram(time, kairosProgram);
+			AbstractKairosProgram<?> existing = kairos.getProgram(time, kairosProgram, edgeLabel);
 			if (existing != null) {
 				if (kairosProgram.equals("OutIsAfterReachability")) {
 					GammaTable<String, Long> gammaTable = existing.getGammaTable();
@@ -148,7 +146,7 @@ public class SubscriptionRouter extends BaseRouter {
 				}
 			} else {
 				if (kairosProgram.equals("OutIsAfterReachability")) {
-					String subDirectoryName = Server.gammaBaseDirectory + "\\" + ve.getTime() + "_" + kairosProgram;
+					String subDirectoryName = Server.gammaBaseDirectory + "\\" + ve.getTime() + "_" + kairosProgram + "_" + edgeLabel;
 					File subDirectory = new File(subDirectoryName);
 					if (!subDirectory.exists())
 						subDirectory.mkdirs();
@@ -215,7 +213,7 @@ public class SubscriptionRouter extends BaseRouter {
 
 		Server.logger.info("GET /chronoweb/gammaTable/:time router added");
 
-		router.get("/chronoweb/gammaTable/:time/:kairosProgram").handler(routingContext -> {
+		router.get("/chronoweb/gammaTable/:time/:kairosProgram/:edgeLabel").handler(routingContext -> {
 
 			long time;
 			try {
@@ -231,11 +229,18 @@ public class SubscriptionRouter extends BaseRouter {
 				return;
 			}
 
+			String edgeLabel = routingContext.pathParam("edgeLabel");
+			if (edgeLabel == null){
+				sendResult(routingContext, "application/json", MessageBuilder.getMissingRequiredURLParameterException("edgeLabel"), 400);
+				return;
+			}
+
 			try {
 				JsonObject result = new JsonObject();
 				result.put("time", time);
 				result.put("program", kairosProgram);
-				Set<String> sources = kairos.getProgram(time, kairosProgram).getGammaTable().getSources();
+				result.put("edgeLabel", edgeLabel);
+				Set<String> sources = kairos.getProgram(time, kairosProgram, edgeLabel).getGammaTable().getSources();
 				JsonArray sourceArray = new JsonArray();
 				for (String source : sources) {
 					sourceArray.add(source);
@@ -255,7 +260,7 @@ public class SubscriptionRouter extends BaseRouter {
 
 		Server.logger.info("GET /chronoweb/graph/:time/:kairosProgram router added");
 
-		router.get("/chronoweb/gammaTable/:time/:kairosProgram/:vertexID").handler(routingContext -> {
+		router.get("/chronoweb/gammaTable/:time/:kairosProgram/:edgeLabel/:vertexID").handler(routingContext -> {
 			long time;
 			try {
 				time = Long.parseLong(routingContext.pathParam("time"));
@@ -276,6 +281,12 @@ public class SubscriptionRouter extends BaseRouter {
 				return;
 			}
 
+			String edgeLabel = routingContext.pathParam("edgeLabel");
+			if (edgeLabel == null){
+				sendResult(routingContext, "application/json", MessageBuilder.getMissingRequiredURLParameterException("edgeLabel"), 400);
+				return;
+			}
+
 			Vertex v = graph.getVertex(vertexID);
 			if (v == null) {
 				sendResult(routingContext, "application/json", MessageBuilder.resourceNotFoundException, 404);
@@ -287,7 +298,8 @@ public class SubscriptionRouter extends BaseRouter {
 				result.put("time", time);
 				result.put("source", vertexID);
 				result.put("program", kairosProgram);
-				JsonObject gamma = kairos.getProgram(time, kairosProgram).getGammaTable().getGamma(vertexID)
+				result.put("edgeLabel", edgeLabel);
+				JsonObject gamma = kairos.getProgram(time, kairosProgram, edgeLabel).getGammaTable().getGamma(vertexID)
 						.toJson(true);
 				if (gamma == null) {
 					sendResult(routingContext, "application/json", MessageBuilder.resourceNotFoundException, 404);
@@ -323,6 +335,12 @@ public class SubscriptionRouter extends BaseRouter {
 				return;
 			}
 
+			String edgeLabel = routingContext.pathParam("edgeLabel");
+			if (edgeLabel == null){
+				sendResult(routingContext, "application/json", MessageBuilder.getMissingRequiredURLParameterException("edgeLabel"), 400);
+				return;
+			}
+
 			String sourceID = routingContext.pathParam("source");
 			if (!vPattern.matcher(sourceID).matches()) {
 				sendResult(routingContext, "application/json", MessageBuilder.invalidVertexIDException, 400);
@@ -351,10 +369,11 @@ public class SubscriptionRouter extends BaseRouter {
 				JsonObject result = new JsonObject();
 				result.put("time", time);
 				result.put("program", kairosProgram);
+				result.put("edgeLabel", edgeLabel);
 				result.put("source", sourceID);
 				result.put("destination", destinationID);
 
-				Object gammaElement = kairos.getProgram(time, kairosProgram).getGammaTable().getGamma(sourceID)
+				Object gammaElement = kairos.getProgram(time, kairosProgram, edgeLabel).getGammaTable().getGamma(sourceID)
 						.getElement(destinationID);
 				result.put("gammaElement", gammaElement);
 
